
syntax = "proto3";

package api;

option go_package=  "./";

service AuthZService {
    rpc IsAuthorized(AuthorizationRequest) returns (AuthorizationResponse);
  }
  
  message AuthorizationRequest {
    string subject = 1;
    string action = 2;
    string resource = 3;
    map<string, string> context = 4;
  }
  
  message AuthorizationResponse {
    bool allowed = 1;
    string reason = 2;
  }
  